# backend/docs/swagger.json
@@ -64,6 +64,27 @@
                 }
             }
         },
+        "/v1/computation/queue": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Computation"
+                ],
+                "summary": "GetQueue",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/v1/computation/requesttoken": {
             "post": {
                 "security": [
